# Critical-Deployment-Guide

./: .replit  SLIP2GO_INTEGRATION.md  build.sh  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/store/: vite.config.ts
artifacts/store/src/: App.tsx  index.css
artifacts/store/src/components/: AnnouncementsTab.tsx
artifacts/store/src/pages/: AdminPanel.tsx  StoreFront.tsx  WalletPage.tsx
attached_assets/: Pasted-2026-06-28T05-27-31-122837978Z-2026-06-28T05-27-31-1228_1782624927493.txt  Pasted-2026-06-28T06-24-40-550427803Z-2026-06-28T06-24-40-5504_1782627960299.txt  Pasted-Act-as-an-Expert-Full-Stack-Python-Developer-Build-a-co_1782455061062.txt  Pasted-Using-cached-httpx-0-28-1-py3-none-any-whl-metadata-7-1_1782459291643.txt  Pasted-key-Type-Description-Example-Required-payload-Object-Ob_1782489128876.txt
backend/: bot.py  config.py  main.py  models.py  requirements.txt  schemas.py  slip_verify.py  webhook.py
backend/routes/: admin.py  announcements.py  auth.py  orders.py  products.py  wallet.py
