[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.32",
    "python-telegram-bot>=22.8",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
